using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

public class AnimationString
{
    internal static String isMoving = "isMoving";
    internal static String isGrounded = "isGrounded";
    internal static String yVelocity = "yVelocity";
    internal static String jump = "jump";
}